--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "github-classiclub",
   "version": "1.0.0",
-  "description": "",
+  "description": "Un sitio para Agrupar pasion por el cine y las series",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Arroyo Emiliano",
   "license": "ISC"
 }
